internal/xds/translator/testdata/out/xds-ir-sublinear/http2-route.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    matcher:
      matcherTree:
        exactMatchMap:
          map:
            bar/bar:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    path: bar/bar
                  name: third-route-use-client
                  route:
                    cluster: third-route-dest
                    upgradeConfigs:
                    - upgradeType: websocket
            bar/foo:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    path: bar/foo
                  name: second-route
                  route:
                    cluster: second-route-dest
                    upgradeConfigs:
                    - upgradeType: websocket
            foo/bar:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    headers:
                    - name: user
                      stringMatch:
                        exact: jason
                    path: foo/bar
                    queryParameters:
                    - name: debug
                      stringMatch:
                        exact: "yes"
                  name: first-route
                  route:
                    cluster: first-route-dest
                    upgradeConfigs:
                    - upgradeType: websocket
            foo/foo:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    path: foo/foo
                  name: fourth-route-not-http2
                  route:
                    cluster: fourth-route-dest
                    upgradeConfigs:
                    - upgradeType: websocket
        input:
          name: request-headers
          typedConfig:
            '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
            headerName: :path
    name: first-listener/*
